# a2a-trace

./: .gitignore  README.md  TECHNICAL.md  pyproject.toml
a2a_trace/: __init__.py  collector.py  context.py  integration.py  propagator.py
a2a_trace/server/: web.py
a2a_trace/server/static/css/: dashboard.css
a2a_trace/server/templates/: index.html
examples/: basic_tracing.py  integration_example.py
tests/: test_collector.py  test_context.py  test_propagator.py
