[project]
name = "a2a-trace"
version = "0.1.0"
description = "A2A-native Distributed Tracing & Agent Topology Visualization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["a2a", "agent", "tracing", "distributed-tracing", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/achievement-lab/a2a-trace"
Documentation = "https://github.com/achievement-lab/a2a-trace#readme"
Repository = "https://github.com/achievement-lab/a2a-trace"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["a2a_trace*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
